chay duoc nma ket noi van loi